<resources>
    <string name="app_name">Simple Social Media Mobile Application</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <!-- menu-->
    <string name="hello_blank_fragment">HELLO THERE</string>
    <string name="home">Home</string>
    <string name="add_blogs">Add blogs</string>
    <string name="users">Users</string>
    <string name="chat_list">Chat list</string>
    <string name="profile">Profile</string>
    <!-- edit profile -->
    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="update_name">Update Name</string>
    <string name="change_password">Change Password </string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="his_message">His Message</string>
    <string name="delivered">Delivered</string>
    <string name="hisname">HisName</string>
    <string name="online">Online</string>
    <string name="start_typing">Start Typing</string>
    <string name="his_name">His Name</string>
    <string name="last_message">Last Message</string>
    <string name="future">Ta opcja będzie dostępna w przyszłości</string>
</resources>