<?xml version="1.0" encoding="utf-8"?>
<!-- menu - container that holds the menu items -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- item - creates menu item-->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/ic_users"
        android:title="@string/users" />
    <item
        android:id="@+id/nav_addblogs"
        android:icon="@drawable/ic_add"
        android:title="@string/add_blogs" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat_list" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/profile" />
</menu>